# Urho3D-Editor

./: CMakeLists.txt  Readme.md
Resources/: Layout.xml
Resources/Editor/: Editor.qrc  Layout.xml
Source/Editor/: AbstractDocument.cpp  AbstractDocument.h  Action.h  Application.cpp  Application.h  Bridge.h  Configuration.cpp  Configuration.h  Document.cpp  Document.h  EditorApplication.cpp  EditorApplication.h  EditorDocument.cpp  EditorDocument.h  EditorSettings.cpp  EditorSettings.h  HierarchyWindow.cpp  HierarchyWindow.h  MainWindow.cpp  MainWindow.h  Module.cpp  Module.h  OptionsDialog.cpp  OptionsDialog.h  SceneEditor.cpp  SceneEditor.h  Urho3DProject.cpp  Urho3DProject.h  Urho3DWidget.cpp  Urho3DWidget.h
Source/Editor/SceneEditor/: AttributeInspector.cpp  AttributeInspector.h  DebugRenderer.cpp  Gizmo.cpp  Gizmo.h  GizmoManager.cpp  GizmoManager.h  HierarchyWindow.cpp  HierarchyWindow.h  ObjectPicker.cpp  ObjectPicker.h  SceneActions.cpp  SceneActions.h  SceneDocument.cpp  SceneDocument.h  SceneEditor.cpp  SceneEditor.h  SceneOverlay.cpp  SceneOverlay.h  SceneViewportManager.cpp  SceneViewportManager.h
Source/Editor/Widgets/: AttributeWidget.cpp  AttributeWidget.h  AttributeWidgetImpl.cpp  AttributeWidgetImpl.h  CollapsiblePanelWidget.cpp  CollapsiblePanelWidget.h  ObjectHierarchyModel.cpp  ObjectHierarchyModel.h  SerializableWidget.cpp  SerializableWidget.h  TreeModel.cpp  TreeModel.h  Urho3DWidget.cpp  Urho3DWidget.h  VariantEditorWidget.cpp  VariantEditorWidget.h  VariantEditorWidgetImpl.cpp  VariantEditorWidgetImpl.h
Source/EditorLauncher/: Main.cpp
Source/EditorToolkit/: CMakeLists.txt
Source/EditorToolkit/Editor/: CameraController.cpp  CameraController.h  DebugGeometryRenderer.cpp  DebugGeometryRenderer.h  Editor.cpp  Editor.h  EditorCamera.cpp  EditorEvents.h  EditorInterfaces.cpp  EditorInterfaces.h  EditorViewportLayout.cpp  EditorViewportLayout.h  Gizmo.cpp  Gizmo.h  HierarchyWindow.cpp  HierarchyWindow.h  Inspector.cpp  Inspector.h  KeyBinding.cpp  KeyBinding.h  ObjectSelector.cpp  ObjectSelector.h  Selection.cpp  Selection.h
Source/EditorToolkit/GenericUI/: AbstractInput.cpp  AbstractInput.h  GenericUI.cpp  GenericUI.h  KeyBinding.cpp  KeyBinding.h  UrhoUI.cpp  UrhoUI.h
Source/EditorToolkit/GenericUI/Qt/: QtUI.cpp  QtUI.h  QtUrhoHelpers.cpp  QtUrhoHelpers.h  QtUrhoWidget.cpp  QtUrhoWidget.h
Source/Samples/: CMakeLists.txt
Source/Samples/00_Editor/: CMakeLists.txt  Main.cpp  StandardEditor.cpp  StandardEditor.h
Source/Samples/01_AdvancedUI/: CMakeLists.txt  Main.cpp
Source/Urho3DEditor/: AbstractDocument.cpp  AbstractDocument.h  Application.cpp  Application.h  Bridge.h  CMakeLists.txt  Configuration.h  Document.cpp  Document.h  MainWindow.cpp  MainWindow.h  Module.cpp  Module.h  OptionsDialog.cpp  OptionsDialog.h  Urho3DProject.cpp  Urho3DProject.h
Source/Urho3DEditor/Core/: Core.cpp  Core.h  Document.cpp  Document.h  DocumentWindow.cpp  DocumentWindow.h  GlobalVariable.cpp  GlobalVariable.h  Project.cpp  Project.h  TypeMap.h
Source/Urho3DEditor/Dialogs/: LaunchDialog.cpp  LaunchDialog.h
Source/Urho3DEditor/Documents/: ProjectDocument.cpp  ProjectDocument.h
Source/Urho3DEditor/SceneEditor/: AttributeInspector.cpp  AttributeInspector.h  DebugRenderer.cpp  DebugRenderer.h  Gizmo.cpp  Gizmo.h  HierarchyWindow.cpp  HierarchyWindow.h  ObjectPicker.cpp  SceneActions.cpp  SceneDocument.cpp  SceneDocument.h  SceneEditor.cpp  SceneEditor.h  SceneOverlay.cpp  SceneOverlay.h
Source/Urho3DEditor/Widgets/: AttributeWidget.cpp  AttributeWidget.h  AttributeWidgetImpl.cpp  AttributeWidgetImpl.h  ObjectHierarchyModel.cpp  SerializableWidget.cpp  SerializableWidget.h  Urho3DWidget.cpp  Urho3DWidget.h
Source/Urho3DPlayer/: CMakeLists.txt  Urho3DPlayer.cpp  Urho3DPlayer.h
