add_library(EditorToolkit
    ${CMAKE_CURRENT_SOURCE_DIR}/GenericUI/GenericUI.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GenericUI/GenericUI.h
    ${CMAKE_CURRENT_SOURCE_DIR}/GenericUI/UrhoUI.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GenericUI/UrhoUI.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorViewportLayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorViewportLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/CameraController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/CameraController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Editor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Editor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorInterfaces.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorInterfaces.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/KeyBinding.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/KeyBinding.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/ObjectSelector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/ObjectSelector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Selection.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Selection.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/HierarchyWindow.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/HierarchyWindow.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/DebugGeometryRenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/DebugGeometryRenderer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Gizmo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Gizmo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Transformable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Editor/Transformable.h
)
